# ad_iced_builder

./: .gitignore  Cargo.toml  build.rs
src/: code_gen_version_two.rs  code_generator.rs  code_highlighting.rs  controls.rs  data_structures.rs  enum_builder.rs  icon.rs  main.rs  styles.rs  views.rs
src/code_gen_version_two/: app.rs  builder.rs  events.rs  helpers.rs  styles.rs  types.rs  view.rs  widgets.rs  window_settings.rs
src/code_generator/: generate.rs  import.rs  tokens.rs  writer.rs
src/code_generator/generate/: app.rs  events.rs  types.rs  view.rs  widgets.rs  window_settings.rs
src/controls/: batch_edit.rs  control_styling.rs
src/data_structures/: properties.rs  types.rs  widget_hierarchy.rs
src/data_structures/properties/: messages.rs  properties.rs
src/data_structures/types/: type_implementations.rs  types.rs
src/styles/: button.rs  checkbox.rs  combo_box.rs  container.rs  rule.rs  style_enum.rs  stylefn_builders.rs
src/views/: add_views.rs  add_widgets.rs  enum_editor.rs  full_code_view.rs  navigation_bar.rs  preview.rs  settings_views.rs  struct_editor.rs  theme_and_stylefn_builder.rs  widget_tree.rs
src/views/settings_views/: view_settings.rs  window_settings.rs
